# Paper-to-voice-assistant

./: .gitignore  .gitignore_new  README.md  README_NEW.md  app.py  app1.py  main.py  optimised.py  pyproject.toml  requirements.txt  setup.py
config/: .env.example
src/paper_to_voice/: __init__.py
src/paper_to_voice/audio/: __init__.py  processor.py  tts.py
src/paper_to_voice/core/: config.py  models.py
src/paper_to_voice/utils/: pdf_processor.py
src/paper_to_voice/workflow/: dialog.py  orchestrator.py  steps.py
tests/: test_basic.py
