[project]
name = "paper-to-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "gradio-client>=1.12.1",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.6",
    "pydub>=0.25.1",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
    "tqdm>=4.67.1",
]
